# TFStory

./: CMakeLists.txt  FindSFML.cmake  README.md  build.sh  main.cpp
Utils/: bubbleSort.h
cfg/: CollectableCfg.cpp  CollectableCfg.h  Config.cpp  Config.h  ControlsCfg.cpp  ControlsCfg.h  DialogCfg.cpp  DialogCfg.h  DialogScreenCfg.cpp  DialogScreenCfg.h  FontCfg.h  MapCfg.cpp  MapCfg.h  MenuCfg.cpp  MenuCfg.h  ParseUtils.cpp  ParseUtils.h  PlayerCfg.cpp  PlayerCfg.h  SceneCfg.cpp  SceneCfg.h  SpriteCfg.cpp  SpriteCfg.h  config.ini  inicpp.hpp
cfg/controls/: button.ini  menu.ini  picBox.ini  screen.ini  scrollBar.ini  scrollBarForDialog.ini  scrollList.ini  textBoxForDialog.ini  textBoxForMenu.ini
cfg/maps/: firstMap.ini
cfg/scene1/: dialog1.ini  scene1.ini  testDialog.ini
cfg/sprites/: Collectable1.ini  Collectable2.ini  Collectable3.ini  cat.ini  cat2.ini  cat3.ini  coldflow.ini  scatter.ini  spritesFont.ini  swiftgleam.ini  truck.ini
src/: Collectable.cpp  Collectable.h  EventDispatcher.cpp  EventDispatcher.h  GameManager.cpp  GameManager.h  Interactable.cpp  Interactable.h  Logger.cpp  Logger.h  NonInteractableNpc.cpp  NonInteractableNpc.h  Player.cpp  Player.h  Scene.cpp  Scene.h  SortedSpritesList.h  Types.cpp  Types.h  map.cpp  map.h  npc.cpp  npc.h  utils.cpp  utils.h
src/ResourceManagers/: EntitiesManager.cpp  EntitiesManager.h  FontManager.cpp  FontManager.h  RandomGenerator.cpp  RandomGenerator.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h
src/controls/: Button.cpp  Button.h  ClickableList.cpp  ClickableList.h  PicBox.cpp  PicBox.h  ScrollBar.cpp  ScrollBar.h  TextBox.cpp  TextBox.h  Tokenizer.cpp  Tokenizer.h
src/dlg/: Dlg.cpp  Dlg.h
src/menu/: menu.cpp  menu.h
tests/: CMakeLists.txt  SortedSpritesListTests.cpp  TestData.h  build.sh
